--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -3917,7 +3917,7 @@
     "selected_all": "すべて選択",
     "set_temp_error": "設定温度に達することができません。水路の温度を変更してください。",
     "no_device_support_eco_key": "利用可能なデバイスがありません。デバイスが接続されていて、ECOモードをサポートしていることを確認してください。",
-    "appliance_disconnect_cannot_open_eco": "デバイスが切断されています。WiFiとリモートコントロールが有効になっているか確認してください。",
+    "appliance_disconnect_cannot_open_eco": "デバイスが切断されています。Wi-Fi とリモート コントロールが有効になっているかどうかを確認してください。",
     "power_on_remote_eabled_tips": "デバイスの電源がオンになっていて、リモート スタートが有効になっている場合にのみ使用できます。",
     "power_on_tips": "デバイスの電源がオンになっている場合にのみ使用できます。",
     "asko_oven_on_during_on": "使用中にON",
@@ -4149,5 +4149,56 @@
     "CL_DV_HOB_refresh_mode": "リフレッシュモード",
     "hob_induction3_new_tips": "スマート調理器具を接続する方法を学び、温度を正確に制御した調理に特化した、さまざまなステップバイステップのレシピを閲覧します。",
     "CL_DV_OV_added_successfully": "正常に追加されました!",
-    "add_routine": "ルーチンを追加"
+    "add_routine": "ルーチンを追加",
+    "CL_DV_PIND_update_blue_tooth": "Bluetoothがオンになっていることを確認してください。",
+    "CL_DV_PIND_accessory_firmware_update": "アクセサリファームウェアアップデート",
+    "CL_CF_CS_ble_scan_not_list": "デバイスがリストにない場合は、「再試行」をクリックして再度検索するか、「次へ」をクリックして別の方法でネットワークを構成してください。",
+    "CL_CF_CS_ble_scan_have_not_found": "Bluetooth 上のデバイスが見つかりません。「再試行」をクリックして再度検索するか、「次へ」をクリックして別の方法でネットワークを構成してください。",
+    "CL_DV_WM_pump_cleaning": "洗浄ポンプ...",
+    "CL_DV_WM_autodoes_tip": "この機能を有効にすると、洗濯中にデバイスが洗剤と柔軟剤をスマートに分配します。",
+    "CL_DV_WM_detergent_department_key": "洗剤入れ",
+    "CL_DV_WM_Dosage_Amount_key": "投与量",
+    "CL_DV_WM_softener_department_key": "柔軟剤入れ",
+    "CL_DV_WM_auto_does_with_detergent": "洗剤を使った自動投与",
+    "CL_DV_WM_same_detergent": "同じ洗剤",
+    "CL_DV_WM_normal_dosage_weight_tip": "通常の使用量：衣類の重量4～5kg。",
+    "CL_DV_WM_pump_clean_note_1": "注意:ディスペンシングコンポーネントの内容を変更する場合は、 ",
+    "CL_DV_WM_pump_clean_note_2": "まずコンポーネントをクリーニングします。",
+    "CL_DV_WM_Pump_clean_key": "ポンプ洗浄",
+    "CL_DV_WM_pump_clean_how_to_use": "使い方は？",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. ポンプのクリーニング機能を起動する前に、コンパートメントを空にして水を入れます。",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2.機械側からポンプ洗浄機能を有効にします。",
+    "CL_DV_WM_pump_clean_when_to_use": "いつ使うのですか?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1.「柔軟剤」コンパートメントの内容物を変更する場合は、コンパートメントが空であることを確認し、次回使用する前にポンプ洗浄機能を実行してください。 ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2.半年以上ポンプを清掃していない場合は、ポンプ清掃機能を有効にすることができます。",
+    "CL_DV_WM_standard_auto_does_key": "標準オートドーズ",
+    "CL_DV_WM_compartment_in_use_key": "使用中のコンパートメント",
+    "CL_CF_CS_oven_g_800_cs_1": "デバイスを通常の動作条件に設定します。\nメニューアイコンをタップします。",
+    "CL_CF_CS_oven_g_800_cs_2": "Wi-Fi アイコンをタイムラインの「C」に到達するまで約 3 ～ 6 秒間タップし続けます。",
+    "CL_CF_CS_oven_g_800_cs_3": "デバイス ネットワークは 5 分間接続可能になりました。\n続行するには「次へ」をクリックします。",
+    "CL_CF_CS_oven_g_800_p_1": "デバイスを通常の動作条件に設定します。\nメニューアイコンをタップします。",
+    "CL_CF_CS_oven_g_800_p_2": "Wi-Fi アイコンをタイムラインの「P」に到達するまで約 6 ～ 9 秒間タップし続けます。",
+    "CL_CF_CS_oven_g_800_p_3": "デバイスは 3 分間ペアリングする準備ができました。\n続行するには「次へ」をクリックします。",
+    "CL_DV_PIND_update_fail_tip1": "予期しないエラーが発生しました。ファームウェアの更新は失敗しました。",
+    "CL_DV_PIND_update_fail_tip4": "アクセサリの更新をもう一度お試しください。",
+    "CL_DV_PIND_update_fail_tip2": "更新中はデバイスを近くに置いてください。",
+    "CL_DV_PIND_update_fail_tip3": "Bluetooth接続を確認してください。",
+    "room_good_content": "この部屋の空調は良好です。今のところ最適化は必要ありません。",
+    "edit_address_title": "住所を編集",
+    "edit_profile_title": "ユーザープロフィールを編集",
+    "CL_DV_OV_reduce_moisture": "湿気を減らす",
+    "air_care_level_tips": "温度評価基準： 良好：17 < T < 27℃ 正常：10≤T≤17℃、27≤T≤30℃ 不良：T＜10℃ T＞30℃ 湿度評価基準： 良好：H < 70% 正常：30≤H≤40%、70≤H≤80% 不良：H＜30%、H＞80%",
+    "addresses_key": "住所",
+    "default_address_user": "デフォルトアドレス",
+    "set_default_address_user": "デフォルトのアドレスとして設定",
+    "CL_DV_OV_reduce_moisture_desc": "水分を減らすタイミングを設定します。水分を減らすサイクルは最大 3 つまで追加できます。",
+    "CL_CF_RM_swap_to_exchange_tip": "部屋のタイプを変更するには、交換ボタンをクリックしてください",
+    "set_wine_light_mode": "以下の各モードの設定を行います。",
+    "wine_lights_use": "さまざまなイベント中にライトがどのように動作するかを選択します。",
+    "light_switch_content_msg": "ライト スイッチを使用すると、機器のライトをすばやくオンまたはオフにすることができます。スイッチは他のライト モードを上書きします。",
+    "lights_on_for_msg": "ライトスイッチのライトがオンになっている時間を設定します。「ライトオン時間」で設定された時間が経過すると、アプライアンスは以前のライトモードの動作に戻ります。",
+    "ambient_mode_msg": "アンビエントモードは、リビングスペースの雰囲気に溶け込みます。ドアを閉めると起動します。",
+    "three_standby": "「時計画面」の後に何分間操作が行われなかった場合に、キャビネットのディスプレイがスタンバイ状態になるかを設定します。",
+    "delete_account_tips": "すべてのデータがシステムから削除されると、電子メールが届きます。",
+    "CL_DV_RF_water_inlet_tube_sensor": "水入口チューブセンサー"
 }
