--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -3917,7 +3917,7 @@
     "selected_all": "vybraté všetko",
     "set_temp_error": "Nastavenú teplotu nie je možné dosiahnuť. Prosím, upravte teplotu vody.",
     "no_device_support_eco_key": "Nie je k dispozícii žiadne zariadenie, uistite sa, že vaše zariadenia sú pripojené a podporujú režim ECO.",
-    "appliance_disconnect_cannot_open_eco": "Zariadenie je odpojené, skontrolujte, či sú povolené WiFi a diaľkové ovládanie.",
+    "appliance_disconnect_cannot_open_eco": "Zariadenie je odpojené, skontrolujte, či je zapnuté Wi-Fi a diaľkové ovládanie.",
     "power_on_remote_eabled_tips": "Dostupné iba vtedy, keď je zariadenie zapnuté a je povolené vzdialené spustenie.",
     "power_on_tips": "Dostupné iba vtedy, keď je zariadenie zapnuté.",
     "asko_oven_on_during_on": "ON počas používania",
@@ -4149,5 +4149,56 @@
     "CL_DV_HOB_refresh_mode": "Režim obnovenia",
     "hob_induction3_new_tips": "Naučte sa pripojiť svoj inteligentný riad a prezrite si širokú škálu receptov krok za krokom, špeciálne vytvorených na varenie s presnou teplotou.",
     "CL_DV_OV_added_successfully": "Úspešne pridané!",
-    "add_routine": "PRIDAŤ RUTINU"
+    "add_routine": "PRIDAŤ RUTINU",
+    "CL_DV_PIND_update_blue_tooth": "Uistite sa, že máte zapnuté bluetooth.",
+    "CL_DV_PIND_accessory_firmware_update": "Aktualizácia firmvéru príslušenstva",
+    "CL_CF_CS_ble_scan_not_list": "Ak vaše zariadenie nie je uvedené v zozname, môžete kliknúť na „SKÚŠAŤ ZNOVU“ a hľadať znova, alebo kliknúť na „ĎALEJ“ a nakonfigurovať sieť iným spôsobom.",
+    "CL_CF_CS_ble_scan_have_not_found": "Na bluetooth sme nenašli žiadne zariadenie. Môžete kliknúť na „SKÚŠAŤ ZNOVU“ a hľadať znova, alebo kliknúť na „ĎALEJ“ a nakonfigurovať sieť iným spôsobom.",
+    "CL_DV_WM_pump_cleaning": "Čistiace čerpadlo...",
+    "CL_DV_WM_autodoes_tip": "Povoľte túto funkciu a vaše zariadenie bude inteligentne dávkovať prací prostriedok a aviváž počas prania.",
+    "CL_DV_WM_detergent_department_key": "PRIESTOR NA PRACÍ PROSTRIEDOK",
+    "CL_DV_WM_Dosage_Amount_key": "Dávka Množstvo",
+    "CL_DV_WM_softener_department_key": "PRIESTOR NA ZMÄKČOVAČ",
+    "CL_DV_WM_auto_does_with_detergent": "Automatické dávkovanie s čistiacim prostriedkom",
+    "CL_DV_WM_same_detergent": "Rovnaký čistiaci prostriedok",
+    "CL_DV_WM_normal_dosage_weight_tip": "Normálne dávkovanie: 4 ~ 5 kg hmotnosti oblečenia.",
+    "CL_DV_WM_pump_clean_note_1": "Poznámky: Ak chcete zmeniť obsah dávkovacej zložky, nezabudnite na to ",
+    "CL_DV_WM_pump_clean_note_2": "najprv vyčistite komponent.",
+    "CL_DV_WM_Pump_clean_key": "Čerpadlo čisté",
+    "CL_DV_WM_pump_clean_how_to_use": "Ako používať?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Pred aktiváciou funkcie čistenia čerpadla vyprázdnite a naplňte priehradku vodou.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktivujte funkciu čistenia čerpadla zo strany stroja.",
+    "CL_DV_WM_pump_clean_when_to_use": "Kedy použiť?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Ak chcete vymeniť obsah v priehradke na „aviváž“, uistite sa, že je prázdna a pred ďalším použitím spustite funkciu čistenia pumpy. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Viac ako pol roka ste pumpu nečistili, môžete aktivovať funkciu čistenia pumpy.",
+    "CL_DV_WM_standard_auto_does_key": "ŠTANDARDNÁ AUTODÁVKA",
+    "CL_DV_WM_compartment_in_use_key": "PRIESTOR V POUŽÍVANÍ",
+    "CL_CF_CS_oven_g_800_cs_1": "Nastavte zariadenie na normálne prevádzkové podmienky.\n Klepnite na ikonu ponuky.",
+    "CL_CF_CS_oven_g_800_cs_2": "Klepnite na ikonu Wi-Fi a podržte ju približne 3-6 sekúnd, kým nedosiahne písmeno „C“ na časovej osi.",
+    "CL_CF_CS_oven_g_800_cs_3": "Sieť zariadenia je teraz otvorená na pripojenie na 5 minút.\n Pokračujte kliknutím na NEXT.",
+    "CL_CF_CS_oven_g_800_p_1": "Nastavte zariadenie na normálne prevádzkové podmienky.\n Klepnite na ikonu ponuky.",
+    "CL_CF_CS_oven_g_800_p_2": "Klepnite na ikonu Wi-Fi a podržte ju približne 6-9 sekúnd, kým nedosiahne písmeno „P“ na časovej osi.",
+    "CL_CF_CS_oven_g_800_p_3": "Zariadenie je teraz pripravené na párovanie na 3 minúty.\n Pokračujte kliknutím na NEXT.",
+    "CL_DV_PIND_update_fail_tip1": "Vyskytla sa neočakávaná chyba. Aktualizácia firmvéru bola neúspešná.",
+    "CL_DV_PIND_update_fail_tip4": "Skúste znova aktualizovať príslušenstvo.",
+    "CL_DV_PIND_update_fail_tip2": "Počas aktualizácie majte svoje zariadenia blízko.",
+    "CL_DV_PIND_update_fail_tip3": "Skontrolujte svoje bluetooth pripojenie.",
+    "room_good_content": "Klimatizácia tejto miestnosti je dobrá. Optimalizácia zatiaľ nie je potrebná.",
+    "edit_address_title": "UPRAVIŤ ADRESU",
+    "edit_profile_title": "UPRAVIŤ POUŽÍVATEĽSKÝ PROFIL",
+    "CL_DV_OV_reduce_moisture": "Znížte vlhkosť",
+    "air_care_level_tips": "Štandard hodnotenia teploty: Dobrý: 17 < T < 27℃ Normálny: 10≤T≤17℃, 27≤T≤30℃ Nie je dobrý: T＜10℃ T＞30℃ Štandard hodnotenia vlhkosti: Dobrý: H < 70 % Normálny: 30≤H≤40%, 70≤H≤80% Nevhodné: V＜30%, H＞80%",
+    "addresses_key": "adresy",
+    "default_address_user": "VÝCHODNÁ ADRESA",
+    "set_default_address_user": "Nastaviť ako predvolenú adresu",
+    "CL_DV_OV_reduce_moisture_desc": "Nastavte, kedy sa má vlhkosť znížiť. Môžete pridať až 3 cykly zníženia vlhkosti.",
+    "CL_CF_RM_swap_to_exchange_tip": "Ak chcete zmeniť typ izby, kliknite na tlačidlo Vymeniť",
+    "set_wine_light_mode": "Nastavte svoje preferencie pre každý z nižšie uvedených režimov.",
+    "wine_lights_use": "Vyberte, ako sa majú svetlá správať počas rôznych udalostí.",
+    "light_switch_content_msg": "Spínač svetiel vám umožňuje rýchlo zapnúť alebo vypnúť svetlá na spotrebiči. Prepínač prepíše ostatné svetelné režimy.",
+    "lights_on_for_msg": "Nastavte, ako dlho zostanú svetlá spínača svetiel aktivované. Po uplynutí časového obdobia nastaveného na 'Lights On For' sa spotrebič vráti k predchádzajúcim režimom osvetlenia.",
+    "ambient_mode_msg": "Ambientný režim zapadá do atmosféry obytného priestoru. Aktivuje sa po zatvorení dverí.",
+    "three_standby": "Nastavte, po koľkých minútach nečinnosti po „obrazovke hodín“ sa displej skrinky prepne do pohotovostného režimu.",
+    "delete_account_tips": "Keď budú všetky vaše údaje vymazané z nášho systému, dostanete e-mail.",
+    "CL_DV_RF_water_inlet_tube_sensor": "Senzor prívodnej trubice vody"
 }
