--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -3917,7 +3917,7 @@
     "selected_all": "вибрано все",
     "set_temp_error": "Встановлену температуру не можна досягти. Будь ласка, змініть температуру води.",
     "no_device_support_eco_key": "Немає доступних пристроїв, переконайтеся, що ваші пристрої підключені та підтримують режим ECO.",
-    "appliance_disconnect_cannot_open_eco": "Пристрій відключено, будь ласка, перевірте, чи ввімкнено WiFi та дистанційне керування.",
+    "appliance_disconnect_cannot_open_eco": "Пристрій відключено, перевірте, чи ввімкнено Wi-Fi і дистанційне керування.",
     "power_on_remote_eabled_tips": "Доступно, лише коли пристрій увімкнено та ввімкнено віддалений запуск.",
     "power_on_tips": "Доступно лише коли пристрій увімкнено.",
     "asko_oven_on_during_on": "ON під час використання",
@@ -4149,5 +4149,56 @@
     "CL_DV_HOB_refresh_mode": "Режим оновлення",
     "hob_induction3_new_tips": "Дізнайтеся, як підключити розумний посуд, і перегляньте широкий спектр покрокових рецептів, спеціально створених для приготування з точною температурою.",
     "CL_DV_OV_added_successfully": "",
-    "add_routine": "ДОДАТИ РУТИНУ"
+    "add_routine": "ДОДАТИ РУТИНУ",
+    "CL_DV_PIND_update_blue_tooth": "Переконайтеся, що ваш bluetooth увімкнено.",
+    "CL_DV_PIND_accessory_firmware_update": "Оновлення прошивки аксесуара",
+    "CL_CF_CS_ble_scan_not_list": "Якщо вашого пристрою немає в списку, ви можете натиснути «СПРОБУВАТИ ЩЕ РАЗ», щоб виконати пошук знову, або натиснути «ДАЛІ», щоб налаштувати мережу іншим способом.",
+    "CL_CF_CS_ble_scan_have_not_found": "Ми не знайшли жодного пристрою з підтримкою bluetooth. Ви можете натиснути «СПРОБУВАТИ ЗНОВУ», щоб виконати пошук ще раз, або натиснути «ДАЛІ», щоб налаштувати мережу іншим способом.",
+    "CL_DV_WM_pump_cleaning": "Очисний насос...",
+    "CL_DV_WM_autodoes_tip": "Увімкніть цю функцію, і ваш пристрій розумно дозуватиме миючий засіб і пом’якшувач тканини, поки ви пратимете білизну.",
+    "CL_DV_WM_detergent_department_key": "ВІДДІЛЕННЯ МИЮЧОГО ЗАСОБУ",
+    "CL_DV_WM_Dosage_Amount_key": "Сума дозування",
+    "CL_DV_WM_softener_department_key": "ВІДДІЛЕННЯ ДЛЯ ПОМ'ЯКШУВАЛЬНИКА",
+    "CL_DV_WM_auto_does_with_detergent": "Автодозування з миючим засобом",
+    "CL_DV_WM_same_detergent": "Той самий миючий засіб",
+    "CL_DV_WM_normal_dosage_weight_tip": "Нормальна доза: 4~5 кг ваги одягу.",
+    "CL_DV_WM_pump_clean_note_1": "Примітки: якщо ви хочете змінити вміст компонента дозування, пам’ятайте про це ",
+    "CL_DV_WM_pump_clean_note_2": "спочатку очистіть компонент.",
+    "CL_DV_WM_Pump_clean_key": "Насос чистий",
+    "CL_DV_WM_pump_clean_how_to_use": "Як використовувати?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Спорожніть і заповніть відсік водою перед активацією функції очищення насоса.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Активуйте функцію очищення насоса з боку машини.",
+    "CL_DV_WM_pump_clean_when_to_use": "Коли використовувати?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1.Якщо ви бажаєте змінити вміст відділення «Пом’якшувач», переконайтеся, що воно порожнє, і запустіть функцію очищення насоса перед наступним використанням. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Понад півроку ви не чистили насос, ви можете активувати функцію очищення насоса.",
+    "CL_DV_WM_standard_auto_does_key": "СТАНДАРТНА АВТОДОЗА",
+    "CL_DV_WM_compartment_in_use_key": "ВІДДІЛ В ВИКОРИСТАННІ",
+    "CL_CF_CS_oven_g_800_cs_1": "Налаштуйте пристрій на нормальні робочі умови.\n Торкніться значка меню.",
+    "CL_CF_CS_oven_g_800_cs_2": "Торкніться значка Wi-Fi і утримуйте його приблизно 3-6 секунд, поки він не досягне «C» на часовій шкалі.",
+    "CL_CF_CS_oven_g_800_cs_3": "Тепер мережа пристрою відкрита для підключення протягом 5 хвилин.\n Натисніть ДАЛІ, щоб продовжити.",
+    "CL_CF_CS_oven_g_800_p_1": "Налаштуйте пристрій на нормальні робочі умови.\n Торкніться значка меню.",
+    "CL_CF_CS_oven_g_800_p_2": "Торкніться значка Wi-Fi і утримуйте його приблизно 6-9 секунд, поки він не досягне «P» на часовій шкалі.",
+    "CL_CF_CS_oven_g_800_p_3": "Тепер пристрій готовий до сполучення протягом 3 хвилин.\n Натисніть ДАЛІ, щоб продовжити.",
+    "CL_DV_PIND_update_fail_tip1": "Сталася неочікувана помилка. Оновлення мікропрограми не вдалось.",
+    "CL_DV_PIND_update_fail_tip4": "Спробуйте ще раз, щоб оновити свій аксесуар.",
+    "CL_DV_PIND_update_fail_tip2": "Під час оновлення тримайте свої пристрої поруч.",
+    "CL_DV_PIND_update_fail_tip3": "Перевірте підключення Bluetooth.",
+    "room_good_content": "Кондиціонер у цьому номері хороший. Оптимізація поки не потрібна.",
+    "edit_address_title": "РЕДАГУВАТИ АДРЕСУ",
+    "edit_profile_title": "РЕДАГУВАТИ ПРОФІЛЬ КОРИСТУВАЧА",
+    "CL_DV_OV_reduce_moisture": "Зменшити вологість",
+    "air_care_level_tips": "Стандарт оцінки температури: добре: 17 < T < 27 ℃ Нормально: 10≤T≤17 ℃, 27≤T≤30 ℃ Погано: T<10 ℃ T＞30 ℃ Стандарт оцінки вологості: добре: H < 70% Нормально: 30≤H≤40%, 70≤H≤80% Погано: H<30%, H>80%",
+    "addresses_key": "адреси",
+    "default_address_user": "АДРЕСА ЗА ЗАМОВЧУВАННЯМ",
+    "set_default_address_user": "Встановити як адресу за умовчанням",
+    "CL_DV_OV_reduce_moisture_desc": "Встановіть, коли слід зменшити вологість. Ви можете додати до 3 циклів зменшення вологи.",
+    "CL_CF_RM_swap_to_exchange_tip": "Щоб змінити тип кімнати, натисніть кнопку обміну",
+    "set_wine_light_mode": "Встановіть свої параметри для кожного з наведених нижче режимів.",
+    "wine_lights_use": "Виберіть, як світло має поводитися під час різних подій.",
+    "light_switch_content_msg": "Перемикач світла дозволяє швидко УВІМКНУТИ або ВИМКНУТИ освітлення на приладі. Перемикач перезаписує інші режими освітлення.",
+    "lights_on_for_msg": "Встановіть, як довго вимикач освітлення залишатиметься увімкненим. Після закінчення періоду часу, встановленого на «Lights On For», прилад повертається до попередніх режимів освітлення.",
+    "ambient_mode_msg": "Режим Ambient зливається з атмосферою житлового простору. Він активується, коли двері зачиняються.",
+    "three_standby": "Встановіть, через скільки хвилин бездіяльності після «Екран годинника» дисплей кабінету перейде в режим очікування.",
+    "delete_account_tips": "Ви отримаєте електронний лист, коли всі ваші дані будуть видалені з нашої системи.",
+    "CL_DV_RF_water_inlet_tube_sensor": "Датчик трубки входу води"
 }
